--- a/MG/accelerate/mg.cabal
+++ b/MG/accelerate/mg.cabal
@@ -13,8 +13,8 @@ executable mg
                     accelerate >= 1.3.0.0,
                     accelerate-llvm,
                     accelerate-llvm-native,
-                    accelerate-llvm-ptx,
-                    cuda,
+                    -- accelerate-llvm-ptx,
+                    -- cuda,
                     criterion,
                     criterion-measurement
   hs-source-dirs:   src
