--- a/nbody-naive/accelerate/nbody-naive/nbody-naive.cabal
+++ b/nbody-naive/accelerate/nbody-naive/nbody-naive.cabal
@@ -18,10 +18,10 @@ executable nbody-naive
                     accelerate >= 1.3.0.0,
                     accelerate-llvm,
                     accelerate-llvm-native,
-                    accelerate-llvm-ptx,
+                    -- accelerate-llvm-ptx,
                     llvm-hs,
-                    cuda,
-                    nvvm,
+                    -- cuda,
+                    -- nvvm,
                     criterion,
                     criterion-measurement
   hs-source-dirs:   src
