--- a/quickhull/accelerate/stack.yaml
+++ b/quickhull/accelerate/stack.yaml
@@ -1,20 +1,25 @@
-resolver: lts-21.4
+resolver: lts-21.7
 
 extra-deps:
-- github: acceleratehs/accelerate
-  commit: 17466411109170c4e4361d9980f1cded0eb85efb
-- github: ivogabe/accelerate-llvm
-  commit: 23ac1c82ff9189ce3f6bc9e475c3ef0afe6bd7de
+- ../../../accelerate
+- ../../../accelerate-llvm/accelerate-llvm
+- ../../../accelerate-llvm/accelerate-llvm-native
+
+# - github: ivogabe/accelerate
+#   commit: 2524e84dc0dfac61ba1197ba8c4e5d3d99a95937
+# - github: ivogabe/accelerate-llvm
+#   commit: c025f0a5c506432e3877b7f3fcbd53cbec4a67e5
+#   subdirs:
+#   - accelerate-llvm
+#   - accelerate-llvm-native
+# - github: llvm-hs/llvm-hs
+#   commit: e4b3cfa47e72f094ab109884f18acfc666b0fb7d  # llvm-15
+#   subdirs:
+#     - llvm-hs
+#     - llvm-hs-pure
+- github: msakai/haskell-MIP
+  commit: 4295aa21a24a30926b55770c55ac00f749fb8a39
   subdirs:
-  - accelerate-llvm
-  - accelerate-llvm-native
-  - accelerate-llvm-ptx
-- github: dpvanbalen/cuda
-  commit: a140e84a905753fd63fc4a4a707d7e60cb1888f3
-- nvvm-0.10.0.1
-- github: llvm-hs/llvm-hs
-  commit: e4b3cfa47e72f094ab109884f18acfc666b0fb7d  # llvm-15
-  subdirs:
-    - llvm-hs
-    - llvm-hs-pure
-- accelerate-io-1.3.0.0@sha256:06c87ff6bc8a57051450f4d522081c2dd703c0074e1ee093143e9deb1d9b144b,1812
+  - MIP
+- OptDir-0.0.4
+- bytestring-encoding-0.1.2.0
