added folds benchmarks

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ MG/accelerate/.stack-work/*
 quickhull/accelerate/.stack-work/*
 FlashAttention/accelerate/.stack-work/*
 LocVolCalib/accelerate/.stack-work/*
+folds/accelerate/.stack-work/*
 
 *.o
 Fin-LocVolCalib/baseline-FinPar/OrigCpp/Debug.txt
