--- a/folds/accelerate/folds.cabal
+++ b/folds/accelerate/folds.cabal
@@ -20,7 +20,8 @@ executable folds
                     -- nvvm,
                     criterion,
                     bytestring,
-                    mwc-random
+                    mwc-random,
+                    deepseq
   hs-source-dirs:   src
   default-language: Haskell2010
   ghc-options: -threaded -Wall
