--- a/quickhull/accelerate/stack.yaml
+++ b/quickhull/accelerate/stack.yaml
@@ -4,7 +4,15 @@ extra-deps:
 - ../../../accelerate
 - ../../../accelerate-llvm/accelerate-llvm
 - ../../../accelerate-llvm/accelerate-llvm-native
-
+- monadLib-3.10.3@sha256:026ba169762e63f0fe5f5c78829808f522a28730043bc3ad9b7c146baedf709f,637
+- github: tomsmeding/llvm-pretty
+  commit: a253a7fc1c62f4825ffce6b2507eebc5dadff32c
+- MIP-0.2.0.0
+- OptDir-0.0.4
+- bytestring-encoding-0.1.2.0
+- acme-missiles-0.3
+- git: https://github.com/commercialhaskell/stack.git
+  commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 # - github: ivogabe/accelerate
 #   commit: 2524e84dc0dfac61ba1197ba8c4e5d3d99a95937
 # - github: ivogabe/accelerate-llvm
@@ -17,9 +25,3 @@ extra-deps:
 #   subdirs:
 #     - llvm-hs
 #     - llvm-hs-pure
-- github: msakai/haskell-MIP
-  commit: 4295aa21a24a30926b55770c55ac00f749fb8a39
-  subdirs:
-  - MIP
-- OptDir-0.0.4
-- bytestring-encoding-0.1.2.0
